--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ boto3 = "^1.38.23"
 pytest = "^8.3.5"
 boto3-stubs = "^1.38.23"
 types-boto3 = {extras = ["ec2", "s3"], version = "^1.38.23"}
+ruff = "^0.11.11"
 
 
 [build-system]
